footer position firefox fix

--- a/aolio.css
+++ b/aolio.css
@@ -32,7 +32,7 @@ body {font-size: 225%!important}
 body {font-size: 250%!important}
 }
 
-body {position:relative;}
+body {position:relative; height: 100%;}
 
 
 
